# 2026-ACC

./: .gitmodules  README.md  qcar_map.pbstream  qlabs_map.pbstream
map/: map.pgm  map.yaml
src/acc_object_localizer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/acc_object_localizer/acc_object_localizer/: __init__.py  object_localizer_node.py
src/acc_object_localizer/acc_object_localizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/acc_object_localizer/config/: params.yaml
src/acc_object_localizer/launch/: object_localizer.launch.py
src/qcar2_control/: CMakeLists.txt  package.xml
src/qcar2_control/config/: path.yaml
src/qcar2_control/include/qcar2_control/: bezier.hpp  ph_runtime.hpp  vec2.hpp
src/qcar2_control/launch/: bezier_vfg_control.launch.py
src/qcar2_control/qcar2_control/: bezier_path_publisher.py  dashboard.py  ph_path_publisher.py
src/qcar2_control/src/: ph_runtime.cpp  pid_controller.cpp  pid_controller_ph.cpp  vfg_guidance.cpp  vfg_guidance_ph.cpp
src/qcar2_ground_truth_tf/: CMakeLists.txt  package.xml
src/qcar2_ground_truth_tf/config/: ekf_gps_imu.yaml
src/qcar2_ground_truth_tf/launch/: ground_truth_tf_publisher_launch.py  qcar_gps_tf_publisher_launch.py
src/qcar2_ground_truth_tf/resource/: qcar2_ground_truth_tf
src/qcar2_ground_truth_tf/rviz/: localization.rviz
src/qcar2_ground_truth_tf/scripts/: qcar_gps_tf_node.py  qlabs_ground_truth_tf_node.py
src/qcar2_msgs/: README.md  package.xml
src/qcar2_nodes/config/: qcar2_2d_localization.lua
src/qcar2_nodes/launch/: qcar2_cartographer_localization_mode_virtual_launch.py  qcar2_cartographer_virtual_launch.py  qcar2_virtual_launch.py
src/qcar2_nodes/src/: qcar2_hardware.cpp
src/qcar2_planner/: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  colcon.pkg  package.xml
src/qcar2_planner/.githooks/: install.sh  pre-commit
src/qcar2_planner/ament/dependency/: exports.cmake  imports.cmake
src/qcar2_planner/ament/test/: add_tests.cmake  discovery.cmake  tests.cmake
src/qcar2_planner/ament/validation/: validations.cmake
src/qcar2_planner/dependency/: CMakeLists.txt  dependencies.cmake
src/qcar2_planner/dependency/internals/: CMakeLists.txt
src/qcar2_planner/shell/: logger.sh
src/qcar2_planner/test/: CMakeLists.txt
src/qcar2_planner/test/integration/: CMakeLists.txt
src/qcar2_planner/test/unit/: CMakeLists.txt
src/qcar2_planner/test/unit/core/bernstein/: polynomial.cpp
src/qcar2_planner/test/unit/core/hodograph/: planar_point.cpp  quintic.cpp
src/qcar2_planner/test/unit/core/rbf/: gaussian.cpp
src/qcar2_planner/validation/: CMakeLists.txt  common.sh  run_static_analysis.sh
src/qcar2_ransac/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
src/qcar2_ransac/config/: params.yaml
src/qcar2_ransac/documentation/architecture/: algorithm.md  implementation.md  structure.md
src/qcar2_ransac/documentation/getting-started/: installation.md  requirements.md
src/qcar2_ransac/documentation/reference/: topics.md  transforms.md
src/qcar2_ransac/documentation/support/: troubleshooting.md
src/qcar2_ransac/documentation/user-guide/: configuration.md  usage.md  visualization.md
src/qcar2_ransac/include/qcar2_ransac/: ransac_localizer.hpp
src/qcar2_ransac/launch/: ransac_localizer_launch.py  test_localizer_launch.py
src/qcar2_ransac/qcar2_ransac/: __init__.py
src/qcar2_ransac/scripts/: test_localizer.py
src/qcar2_ransac/src/: ransac_localizer.cpp  ransac_localizer_node.cpp
src/qcar2_ransac/test/unit/ransac_localizer/: test_normalize_class_name.cpp
src/qcar2_transforms/: .gitignore  CMakeLists.txt  README.md  package.xml
src/qcar2_transforms/ament/dependency/: exports.cmake  imports.cmake
src/qcar2_transforms/ament/test/: tests.cmake
src/qcar2_transforms/ament/validation/: validations.cmake
src/qcar2_transforms/config/: CMakeLists.txt
src/qcar2_transforms/qcar2_transforms/: __init__.py  _version.py
src/qcar2_transforms/qcar2_transforms/core/: __init__.py
src/qcar2_transforms/qcar2_transforms/core/frame_transform/: __init__.py  frame_transform.py
src/qcar2_transforms/qcar2_transforms/core/quaternion/: __init__.py
src/qcar2_transforms/qcar2_transforms/core/waypoints/: __init__.py
src/qcar2_transforms/test/: CMakeLists.txt
src/qcar2_transforms/test/integration/: test_package.py
src/qcar2_transforms/test/unit/: CMakeLists.txt
src/qcar2_transforms/test/unit/core/frame_transform/: test_inverse.py  test_rotation.py  test_transform.py  test_translation.py
src/qcar2_transforms/test/unit/core/quaternion/: test_euler.py  test_yaw.py
src/qcar2_transforms/test/unit/core/waypoints/: test_batch.py
src/qcar2_transforms/validation/: CMakeLists.txt
