<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qcar2_planner</name>
  <version>0.1.0</version>
  <description>PH curve-based path planning library for the QCar2 autonomous vehicle platform</description>
  <maintainer email="maintainer@todo.todo">maintainer</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 -->
  <exec_depend>rclcpp</exec_depend>
  <!-- Add more dependencies here -->

  <!-- Validation -->
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <!-- Testing -->
  <test_depend>catch_ros2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
